--- a/packages/admin-packager/package.json
+++ b/packages/admin-packager/package.json
@@ -4,9 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=development PORT=3000 webpack-dev-server"
+    "start": "cross-env NODE_ENV=development PORT=3001 webpack-dev-server",
+    "dist": "cross-env NODE_ENV=production webpack"
   },
   "dependencies": {
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "@types/case-sensitive-paths-webpack-plugin": "^2.1.2",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/mini-css-extract-plugin": "^0.2.0",
@@ -15,13 +19,16 @@
     "@types/webpack": "^4.4.11",
     "@types/webpack-dev-server": "^3.1.0",
     "@types/webpack-manifest-plugin": "^1.3.2",
+    "babel-loader": "^8.0.2",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "fork-ts-checker-webpack-plugin": "^0.4.9",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.2",
     "react-dev-utils": "^5.0.2",
+    "style-loader": "^0.23.0",
     "sw-precache-webpack-plugin": "^0.11.5",
     "ts-loader": "^5.1.1",
     "ts-node": "^7.0.1",
