--- a/packages/admin-packager/tsconfig.json
+++ b/packages/admin-packager/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es6",
     "module": "commonjs",
     "outDir": "build",
+    "jsx": "react",
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
