--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,12 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@types/ali-oss": "*",
     "@app/etc": "*",
     "@app/models": "*",
+    "@types/ali-oss": "*",
     "ali-oss": "^6.0.1",
     "bson": "^3.0.2",
     "co": "4",
+    "joi": "^13.7.0",
     "jsonwebtoken": "^8.3.0",
     "koa": "^2.5.3",
     "koa-body": "^4.0.4",
@@ -17,11 +18,13 @@
     "koa-logger": "^3.2.0",
     "koa-onerror": "^4.1.0",
     "koa-router": "^7.4.0",
+    "koa2-validation": "^0.1.0",
     "log4js": "^3.0.5",
     "mongodb": "^3.1.6"
   },
   "devDependencies": {
     "@types/bson": "^1.0.11",
+    "@types/joi": "^13.6.0",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/koa": "^2.0.46",
     "@types/koa-json": "^2.0.18",
